--- a/todo.txt
+++ b/todo.txt
@@ -1,14 +1,34 @@
 TODO LIST
 
+ACCES SITE : UserController
+login pour valider l'accès et le type d'accès :
+- accès = article/showlist
+- type accès : afficher ou non le bouton ADMIN
+
 PAGE ARTICLE
 pagination de la page showlist : 
 - 10 articles par page si pas de recherche 
 - 10 articles max + message "plus de 10 résultats, affinez votre recherche" si recherche et > 10 résultats
 gérer responsive
 
-PAGE ADMIN
-si accès via le login inital (l'user a le statut ADMIN), on change le menu pour :
-UTILISATEURS EMPLACEMENTS "retour FRONT"
+EMPLACEMENTS
+créer un champ concaténation et le placer en unique dans SQL
+sinon intervalles, ça serait cool...
+pas trop se prendre la tête dessus...
+
+STOCKS
+ce ne sont que des affichages. Ils sont générés par les mouvements. Prévoir un formulaire de 
+recherche multi critères et éventuellement un EXPORT CSV.
+
+USERS
+accessible uniquement aux admins
+permet de créer / modifier / supprimer un compte utilisateur 
+
+MOUVEMENTS
+- entrée
+- sortie
+- transfert
+- inventaire
 
 
 
