--- a/todo.txt
+++ b/todo.txt
@@ -1,15 +1,11 @@
 TODO LIST
 
-ACCES SITE : UserController
-login pour valider l'accès et le type d'accès :
-- accès = article/showlist
-- type accès : afficher ou non le bouton ADMIN
-
 PAGE ARTICLE
 pagination de la page showlist : 
 - 10 articles par page si pas de recherche 
 - 10 articles max + message "plus de 10 résultats, affinez votre recherche" si recherche et > 10 résultats
 gérer responsive
+nouvel article : même en cas d'erreur, les infos ne se remettent pas dans le formulaire
 
 EMPLACEMENTS
 sinon intervalles, ça serait cool...
