--- a/todo.txt
+++ b/todo.txt
@@ -1,7 +1,10 @@
 TODO LIST
 
+chargement CSV
+corriger header incorrect
+
 EMPLACEMENTS
-sinon intervalles, ça serait cool...
+afficher liste
 
 STOCKS
 ce ne sont que des affichages. Ils sont générés par les mouvements. Prévoir un formulaire de 
