--- a/todo.txt
+++ b/todo.txt
@@ -11,8 +11,8 @@ ce ne sont que des affichages. Ils sont générés par les mouvements. Prévoir 
 recherche multi critères et éventuellement un EXPORT CSV.
 
 USERS
-accessible uniquement aux admins
 permet de créer / modifier / supprimer un compte utilisateur 
+ajouter controles js sur les champs (validité format + pwd/checkPwd ok)
 
 MOUVEMENTS
 - entrée
