refactored repositories : created generic sql methods

--- a/todo.txt
+++ b/todo.txt
@@ -9,6 +9,7 @@ corriger header incorrect
 
 EMPLACEMENTS
 afficher liste
+IL FAUT CREER DES METHODES UNIVERSELLES pour les repos en passant le nom de la table à l'objet enfant
 
 STOCKS
 ce ne sont que des affichages. Ils sont générés par les mouvements. Prévoir un formulaire de 
