--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,8 @@
 TODO LIST
 
+Incoming
+revoir JS pour validation des champs
+
 STOCKS
 ce ne sont que des affichages. Ils sont générés par les mouvements. Prévoir un formulaire de 
 recherche multi critères et éventuellement un EXPORT CSV.
@@ -15,3 +18,5 @@ rendre uniques les champs "références" des mouvements (complexe à cause du ty
 voir si on garde les "status"...
 
 GERER RESPONSIVE
+
+mettre des ancres pour les recherches
