fixed css issue with main width on responsive

--- a/todo.txt
+++ b/todo.txt
@@ -10,4 +10,6 @@ adapter entrées : tout pareil sauf :
 
 vérifier la favicon : erreur html
 
-GERER RESPONSIVE
+terminer RESPONSIVE
+
+réexporter dump sql
