fixed the label for= cases

--- a/todo.txt
+++ b/todo.txt
@@ -2,14 +2,22 @@ TODO LIST
 
 refactoring "rows" : mot clé réservé Sql. Remanier l'ensemble ?
 
+entrées : empecher la ligne à 0 ou < 0
+
 - sortie
 adapter entrées : tout pareil sauf :
 - emplacement dynamique si quantité dispo (en tenant compte des réservées)
 - ajouter quantités réservées dans "stocks" 
-- status "prepare" et "shipped"
+- status "pending" et "shipped"
 
 vérifier la favicon : erreur html
 
 peaufiner le responsive
 
 réexporter dump sql
+
+voir adchecker pour formulaires
+
+mettre un trycatch dans mon loader csv
+
+j'en suis à stockRepository : confirmRowShipment
