fixed little bug around reservation repo and adjusted js to display suggested locations

--- a/todo.txt
+++ b/todo.txt
@@ -2,6 +2,7 @@ TODO LIST
 
 - sortie
 j'ai terminé a priori de gérer la méthode dans le repo
+afficher la quantité réservée dans l'état de stock
 
 il faut modifier le JS pour créer et envoyer le tableau des pré-réservations actuelles sur le code
 de la ligne. On enverra alors ce tableau et on récupèrera les valeurs disponibles.
