--- a/todo.txt
+++ b/todo.txt
@@ -8,9 +8,7 @@ entrées
 ajouter la gestion du error dans la requete post
 
 - sortie
-probleme majeur : modifier une sortie est très compliqué car la quantité est déjà annoncée comme réservée.
-donc si on clique à nouveau sur "chercher" ça pose un problème même si on a supprimé la quantité Les lignes réservées ne peuvent
-pas être modifiées, mais uniquement supprimées. Effacer la ligne enverra une requête de réservation.
+reconstruire les différentes lignes
 
 revoir probleme token si modification en parallèle
 ajouter les différents controles de cohérence (code postal, référence etc et QuantitéTotale par rapport à somme des quantités)
